# swagger_editor_annotation

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/app/src/application/: application.cpp  application.h
src/app/src/messages/: not_implemented.h
src/app/src/windows/main_window/: main_window.cpp  main_window.h
src/app/src/windows/main_window/editor/: editor.cpp  editor.h
src/app/src/windows/main_window/editor/tree_view/: tree_view.cpp  tree_view.h
src/app/src/windows/main_window/editor/tree_view/semantic_tree/: semantic_tree.cpp  semantic_tree.h
src/app/src/windows/main_window/editor/tree_view/semantic_tree/tree_node/: tree_node.cpp  tree_node.h
src/app/src/windows/main_window/editor/workspace/: workspace.cpp  workspace.h
src/app/src/windows/main_window/navigation/: navigation.cpp  navigation.h
